# llm_inspector

./: .gitignore  LICENSE  MANIFEST.in  README.md  package-lock.json  pyproject.toml  test_jsdom.js  test_stream.py
docker/: Dockerfile  docker_test.sh  docker_test_script.py
llm_inspector/: __init__.py  cli.py  config.py  pricing.py  queue_worker.py  server.py  spans.py  storage.py
llm_inspector/patches/: __init__.py  anthropic_patch.py  gemini_patch.py  openai_patch.py  registry.py
llm_inspector/static/: api.js  app.js  diff.js  index.html  json-tree.js  replay.js  style.css  trace-list.js
tests/: demo_data.py  test_async_patch.py  test_auto_link.py  test_configure.py  test_diff.html  test_diff.js  test_import_order.py  test_inject.py  test_multi_provider.py  test_openai_patch.py  test_pipeline.py  test_provider_detection.py  test_spans.py  test_tool_calls.py  test_ttft.py
