[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_inspector"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.100",
  "uvicorn>=0.23",
]   # SDKs (openai, anthropic, google-genai) remain optional

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_inspector*"]

[project.scripts]
llm-inspector = "llm_inspector.cli:main"
